--- a/ws-1/server/public/index.html
+++ b/ws-1/server/public/index.html
@@ -13,14 +13,19 @@
 </head>
 
 <body>
+    <h3>Queue:</h3>
+    <p>Lee - Giacomo - Marie - Stacey - Cameron - Billy - Sam</p>
+    <h3>Current turn:</h3>
+    <h1 id="currentPerson"></h1>
+    <button onclick="nextPerson()">Next</button>
+    <ul id="peopleList"></ul>
+
     <form>
         <input type="text" placeholder="Your message">
         <button>Send</button>
     </form>
     <ul></ul>
-    <h1 id="currentPerson"></h1>
-    <button onclick="nextPerson()">Next</button>
-    <ul id="peopleList"></ul>
+    <h4>Beta version</h4>
 </body>
 
 </html>
