--- a/ws-1/server/public/index.html
+++ b/ws-1/server/public/index.html
@@ -14,18 +14,17 @@
 
 <body>
     <h3>Queue:</h3>
-    <p>Lee - Giacomo - Marie - Stacey - Cameron - Billy - Sam</p>
+    <p>Mario - Giacomo - Antonio - Anna - Digby - Isabella</p>
     <h3>Current turn:</h3>
     <h1 id="currentPerson"></h1>
-    <button onclick="nextPerson()">Next</button>
+    <button class="button-19" onclick="nextPerson()">Next</button>
     <ul id="peopleList"></ul>
-
+        
     <form>
+        
         <input type="text" placeholder="Your message">
-        <button>Send</button>
+        <button class="button-16">SEND</button>
     </form>
-    <ul></ul>
-    <h4>Beta version</h4>
 </body>
 
 </html>
