Fixed and deployed chat app
There was a typo in the word "class" in app.js
Also deployed app on https://chat-app-8rxu.onrender.com

--- a/chatapp/server/public/index.html
+++ b/chatapp/server/public/index.html
@@ -14,10 +14,10 @@
 
 <body>
     <main>
-        <form class="class-join">
+        <form class="form-join">
             <input type="text" id="name" maxlength="8" placeholder="Your name" size="5" required>
             <input type="text" id="room" placeholder="Chat room" size="5" required>
-            <button id="room" type="text">Join</button>
+            <button id="join" type="submit">Join</button>
         </form>
 
         <ul class="chat-display"></ul>
