--- a/inboundapp/public/index.html
+++ b/inboundapp/public/index.html
@@ -22,6 +22,8 @@
 
         <ul class="chat-display"></ul>
 
+        <p class="staff-list"></p>
+
         <p class="user-list"></p>
 
         <p class="room-list"></p>
@@ -31,6 +33,11 @@
         <form class="form-msg">
             <input type="text" id="message" placeholder="Your message" required>
             <button type="submit">Send</button>
+        </form>
+
+        <form class="form-staff">
+            <input type="text" id="message" placeholder="Staff member" required>
+            <button type="submit">Add</button>
         </form>
     </main>
 </body>
