--- a/inboundapp/public/index.html
+++ b/inboundapp/public/index.html
@@ -36,7 +36,7 @@
         </form>
 
         <form class="form-staff">
-            <input type="text" id="message" placeholder="Staff member" required>
+            <input type="text" id="staff" placeholder="Staff member" required>
             <button type="submit">Add</button>
         </form>
     </main>
