--- a/inboundapp/public/index.html
+++ b/inboundapp/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat App</title>
+    <title>Inbound Calls App</title>
     <link href="style.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"
         integrity="sha512-Xm9qbB6Pu06k3PUwPj785dyTl6oHxgsv9nHp7ej7nCpAqGZT3OZpsELuCYX05DdonFpTlBpXMOxjavIAIUwr0w=="
@@ -36,7 +36,7 @@
         </form>
 
         <form class="form-staff">
-            <input type="text" id="staff" placeholder="Staff member" required>
+            <input type="text" id="staff" placeholder="Add staff member" required>
             <button type="submit">Add</button>
         </form>
     </main>
